Redo FindJsonCpp and fix CI
- Commonize samples/ cmakelists txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,27 +68,20 @@ if (CURL_FOUND)
 endif()
 
 ## jsoncpp
-find_package(jsoncpp QUIET)
-if (NOT TARGET jsoncpp_lib)
-    # Check for pkg-config and try to find jsoncpp using it
-    find_package(PkgConfig QUIET)
-    if (PKG_CONFIG_FOUND)
-        pkg_check_modules(JSONCPP_PKG jsoncpp)
-        if (JSONCPP_PKG_FOUND)
-            add_library(jsoncpp_lib INTERFACE)
-            target_include_directories(jsoncpp_lib INTERFACE ${JSONCPP_PKG_INCLUDE_DIRS})
-            target_link_directories(jsoncpp_lib INTERFACE ${JSONCPP_PKG_LIBRARY_DIRS})
-            target_link_libraries(jsoncpp_lib INTERFACE ${JSONCPP_PKG_LIBRARIES})
-            install(
-                TARGETS jsoncpp_lib EXPORT ${PROJECT_NAME}-targets DESTINATION lib
-            )
+if (NOT TARGET JsonCpp::JsonCpp)
+    find_package(jsoncpp)
+    if (NOT TARGET JsonCpp::JsonCpp)
+        message(STATUS "Using alternative findjsoncpp")
+        list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake")
+        find_package(JsonCppCustom)
+        if (NOT TARGET JsonCpp::JsonCpp)
+            message(FATAL_ERROR "Jsoncpp is not available")
         endif()
     endif()
 endif()
-if (NOT TARGET jsoncpp_lib)
-    message(FATAL_ERROR "Jsoncpp is not available")
-endif()
-include_directories(${jsoncpp_INCLUDE_DIRS} ${JSONCPP_PKG_INCLUDE_DIRS})
+install(FILES CMake/FindJsonCppCustom.cmake
+    DESTINATION lib/cmake/tgbot-cpp
+)
 
 ## boost
 set(Boost_USE_MULTITHREADED ON)
@@ -109,7 +102,7 @@ set(LIB_LIST
     ${ZLIB_LIBRARIES}
     ${OPENSSL_LIBRARIES}
     ${Boost_LIBRARIES}
-    jsoncpp_lib
+    JsonCpp::JsonCpp
 )
 
 if (CURL_FOUND)
@@ -125,6 +118,7 @@ add_library(${PROJECT_NAME} ${SRC_LIST})
 target_include_directories(${PROJECT_NAME} PUBLIC 
                            $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
                            $<INSTALL_INTERFACE:include>)
+target_include_directories(${PROJECT_NAME} PUBLIC ${jsoncpp_INCLUDE_DIRS} ${JSONCPP_PKG_INCLUDE_DIRS})
 target_link_libraries(${PROJECT_NAME} ${LIB_LIST})
 include(GNUInstallDirs)
 install(TARGETS ${PROJECT_NAME}
