I noticed that the onSuccessfulPayment method is not available in the current version of the tgbot-cpp library. This makes it challenging to handle successful payment events directly using the library.
Could you let me know if there are any plans to add this method in future updates? If yes, when can we expect it to be implemented?

Thank you for your work on this library, and I look forward to your response!

Best regards,

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.10.2)
 project(TgBot)
 
+set(CMAKE_TOOLCHAIN_FILE "C:/vcpkg/scripts/buildsystems/vcpkg.cmake")
+
 if(POLICY CMP0074)
     cmake_policy(SET CMP0074 NEW) # find_package() uses <PackageName>_ROOT variables
 endif()
